Base de datos editada a normas de diseño

--- a/css/estilos_personalizados.css
+++ b/css/estilos_personalizados.css
@@ -12,3 +12,9 @@
     background-color: #ff740c !important;
     
 }
+
+.btn-salir{
+    color: #fff !important;
+    background-color: #a71d1d !important;
+    border-color: #8b1f3f !important;
+}
